--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 	</head>
-	<body>
-		<a href="class-pdf/logika.pdf">Logika</a>
-		<a href="class-pdf/hidraulika.pdf">Hidraulika</a>
+	<body
+		<ul>
+			<li><a href="class-pdf/logika.pdf">Logika</a></li>
+			<li><a href="class-pdf/hidraulika.pdf">Hidraulika</a></li>
+		</ul>
 	</body>
 <html>
