--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body
+	<body>
 		<ul>
-			<li><a href="class-pdf/logika.pdf">Logika</a></li>
-			<li><a href="class-pdf/hidraulika.pdf">Hidraulika</a></li>
+			<li><a href="src/class-pdf/logika.pdf">Logika</a></li>
+			<li><a href="src/class-pdf/hidraulika.pdf">Hidraulika</a></li>
+		</ul>
+		<ul>
+			<img src="src/img/floppa-react1.png">
+			<img src="src/img/floppa-react2.png">
 		</ul>
 	</body>
 <html>
