--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<li><a href="src/class-pdf/hidraulika.pdf">Hidraulika</a></li>
 		</ul>
 		<ul>
-			<img src="src/img/floppa-react1.png">
-			<img src="src/img/floppa-react2.png">
+			<img src="src/img/floppa-react1.jpg">
+			<img src="src/img/floppa-react2.jpg">
 		</ul>
 	</body>
 <html>
