--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="src/class-pdf/logika.pdf">Logika</a></li>
-			<li><a href="src/class-pdf/hidraulika.pdf">Hidraulika</a></li>
+			<li><a href="src/class-pdf/logika.pdf">Logika<img src="class-pdf/icons/logika.png"/></a></li>
+			<li><a href="src/class-pdf/hidraulika.pdf">Hidraulika</a><img src="class-pdf/icons/hidraulika.png"/></li>
 		</ul>
 		<ul>
 			<img src="src/img/floppa-react1.jpg">
