--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,8 @@
 	<body>
 		<h1>III-4</h1>
 		<ul>
-			<li><a href="src/pdf/logika.pdf">Logika<img src="pdf/icons/logika.png"/></a></li>
-			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="pdf/icons/hidraulika.png"/></li>
+			<li><a href="src/pdf/logika.pdf">Logika<img src="src/pdf/icons/logika.png"/></a></li>
+			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png"/></li>
 		</ul>
 	</body>
 <html>
