--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,12 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>III-4</h1>
+		<header>
+			<h1>III-4</h1>
+		</header>
 		<ul>
-			<li><a href="src/pdf/logika.pdf">Logika<img src="src/pdf/icons/logika.png"/></a></li>
-			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png"/></li>
+			<li><a href="src/pdf/logika.pdf">Logika<img src="src/pdf/icons/logika.png" class="icon"/></a></li>
+			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png class="icon""/></li>
 		</ul>
 	</body>
 <html>
