--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 		</header>
 		<ul>
 			<li><a href="src/pdf/logika.pdf">Logika<img src="src/pdf/icons/logika.png" class="icon"/></a></li>
-			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png class="icon""/></li>
+			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png" class="icon"/></li>
 		</ul>
 	</body>
 <html>
