--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>III-4</title>
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
 	</head>
@@ -9,9 +10,19 @@
 		<header>
 			<h1>III-4</h1>
 		</header>
-		<ul>
-			<li><a href="src/pdf/logika.pdf">Logika<img src="src/pdf/icons/logika.png" class="icon"/></a></li>
-			<li><a href="src/pdf/hidraulika.pdf">Hidraulika</a><img src="src/pdf/icons/hidraulika.png" class="icon"/></li>
+		<ul id="pdf">
+			<li>
+				<a href="src/pdf/logika.pdf">
+					<p>Logika</p>
+					<img src="src/pdf/icons/logika.png" class="icon"/>
+				</a>
+			</li>
+			<li>
+				<a href="src/pdf/hidraulika.pdf">
+					<p>Hidraulika</p>
+					<img src="src/pdf/icons/hidraulika.png" class="icon"/>
+				</a>
+			</li>
 		</ul>
 	</body>
 <html>
