--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,6 @@
 		<title>III-4</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
@@ -12,16 +11,10 @@
 		</header>
 		<ul id="pdf">
 			<li>
-				<a href="src/pdf/logika.pdf">
-					<p>Logika</p>
-					<img src="src/pdf/icons/logika.png" class="icon"/>
-				</a>
+				<a href="src/pdf/logika.pdf">Logika</a>
 			</li>
 			<li>
-				<a href="src/pdf/hidraulika.pdf">
-					<p>Hidraulika</p>
-					<img src="src/pdf/icons/hidraulika.png" class="icon"/>
-				</a>
+				<a href="src/pdf/hidraulika.pdf">Hidraulika</a>
 			</li>
 		</ul>
 	</body>
