--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<header>
+		<header align="center">
 			<h1>III-4</h1>
 		</header>
+		<hr>
 		<ul id="pdf">
 			<li>
 				<a href="src/pdf/logika.pdf">Logika</a>
