--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<header align="center">
-			<h1>III-4</h1>
+		<header>
+			<h1 align="center">III-4</h1>
 		</header>
 		<hr>
 		<ul id="pdf">
