--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>III-4</title>
+		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<header>
-			<h1 align="center">III-4</h1>
-		</header>
-		<hr>
-		<ul id="pdf">
-			<li>
-				<a href="src/pdf/logika.pdf">Logika</a>
-			</li>
-			<li>
-				<a href="src/pdf/hidraulika.pdf">Hidraulika</a>
-			</li>
-		</ul>
+		<p>God motherfucking damn.</p>
 	</body>
 <html>
