--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,10 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<h1>Jano Privracki</h1>
 		<p>God motherfucking damn.</p>
+		<img src="gifs/construction.gif">
+		<p>Under construction, motherfucker!</p>
+		<img src="gifs/mynigga.gif">
 	</body>
 <html>
