--- a/index.htm
+++ b/index.htm
@@ -4,32 +4,25 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
-		<h1>Jano Privracki</h1>
+		<header>
+			<div class="header">
+				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<nav>
+					<a href="gallery/">gallery</a>
+				</nav>
+			</div>
+		</header>
 		<p>God motherfucking damn.</p>
 		<img src="gifs/construction.gif">
 		<p>Under construction, motherfucker!</p>
 		<img src="gifs/mynigga.gif">
-		<p>I'd just like to interject for a moment.  What you're referring to as Linux,
-is in fact, GNU/Linux, or as I've recently taken to calling it, GNU plus Linux.
-Linux is not an operating system unto itself, but rather another free component
-of a fully functioning GNU system made useful by the GNU corelibs, shell
-utilities and vital system components comprising a full OS as defined by POSIX.
+		<p>I'd just like to interject for a moment.  What you're referring to as Linux, is in fact, GNU/Linux, or as I've recently taken to calling it, GNU plus Linux. Linux is not an operating system unto itself, but rather another free component of a fully functioning GNU system made useful by the GNU corelibs, shell utilities and vital system components comprising a full OS as defined by POSIX.
 <br><br>
-Many computer users run a modified version of the GNU system every day,
-without realizing it.  Through a peculiar turn of events, the version of GNU
-which is widely used today is often called "Linux", and many of its users are
-not aware that it is basically the GNU system, developed by the GNU Project.
+Many computer users run a modified version of the GNU system every day, without realizing it.  Through a peculiar turn of events, the version of GNU which is widely used today is often called "Linux", and many of its users are not aware that it is basically the GNU system, developed by the GNU Project.
 <br><br>
-There really is a Linux, and these people are using it, but it is just a
-part of the system they use.  Linux is the kernel: the program in the system
-that allocates the machine's resources to the other programs that you run.
-The kernel is an essential part of an operating system, but useless by itself;
-it can only function in the context of a complete operating system.  Linux is
-normally used in combination with the GNU operating system: the whole system
-is basically GNU with Linux added, or GNU/Linux.  All the so-called "Linux"
-distributions are really distributions of GNU/Linux.</p>
+There really is a Linux, and these people are using it, but it is just a part of the system they use.  Linux is the kernel: the program in the system that allocates the machine's resources to the other programs that you run.  The kernel is an essential part of an operating system, but useless by itself; it can only function in the context of a complete operating system.  Linux is normally used in combination with the GNU operating system: the whole system is basically GNU with Linux added, or GNU/Linux.  All the so-called "Linux" distributions are really distributions of GNU/Linux.</p>
 	</body>
 <html>
