--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -15,6 +15,6 @@
 				</nav>
 			</div>
 		</header>
-		<img src="lignjoslav.jpg">
+		<img style="height: 20em;" src="lignjoslav.jpg">
 	</body>
 <html>
