--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -11,7 +11,7 @@
 			<div class="header">
 				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
 				<nav>
-					<a href="gallery/">gallery</a>
+					<a href="/gallery">gallery</a>
 				</nav>
 			</div>
 		</header>
