--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,10 @@
 			</div>
 		</header>
 		<p>God motherfucking damn.</p>
-		<img src="gifs/construction.gif">
-		<p>Under construction, motherfucker!</p>
+		<aside>
+			<img src="gifs/construction.gif">
+			<p>Under construction, motherfucker!</p>
+		</aside>
 		<img src="gifs/mynigga.gif">
 		<p>I'd just like to interject for a moment.  What you're referring to as Linux, is in fact, GNU/Linux, or as I've recently taken to calling it, GNU plus Linux. Linux is not an operating system unto itself, but rather another free component of a fully functioning GNU system made useful by the GNU corelibs, shell utilities and vital system components comprising a full OS as defined by POSIX.
 <br><br>
