--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 			<img src="gifs/construction.gif">
 			<p>Under construction, motherfucker!</p>
 		</aside>
-		<img src="gifs/mynigga.gif">
+		<img style="height: 5em;" src="gifs/mynigga.gif">
 		<p>I'd just like to interject for a moment.  What you're referring to as Linux, is in fact, GNU/Linux, or as I've recently taken to calling it, GNU plus Linux. Linux is not an operating system unto itself, but rather another free component of a fully functioning GNU system made useful by the GNU corelibs, shell utilities and vital system components comprising a full OS as defined by POSIX.
 <br><br>
 Many computer users run a modified version of the GNU system every day, without realizing it.  Through a peculiar turn of events, the version of GNU which is widely used today is often called "Linux", and many of its users are not aware that it is basically the GNU system, developed by the GNU Project.
