--- a/index.htm
+++ b/index.htm
@@ -16,10 +16,12 @@
 			</div>
 		</header>
 		<p>God motherfucking damn.</p>
-		<aside>
-			<img src="gifs/construction.gif">
-			<p>Under construction, motherfucker!</p>
-		</aside>
+		<div class="alignright">
+			<aside>
+				<img src="gifs/construction.gif">
+				<p>Under construction, motherfucker!</p>
+			</aside>
+		</div>
 		<img style="height: 3em;" src="gifs/mynigga.gif">
 		<p>I'd just like to interject for a moment.  What you're referring to as Linux, is in fact, GNU/Linux, or as I've recently taken to calling it, GNU plus Linux. Linux is not an operating system unto itself, but rather another free component of a fully functioning GNU system made useful by the GNU corelibs, shell utilities and vital system components comprising a full OS as defined by POSIX.
 <br><br>
