--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -4,7 +4,7 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="/gallery.css">
 	</head>
 	<body>
 		<header>
@@ -15,6 +15,10 @@
 				</nav>
 			</div>
 		</header>
-		<img style="height: 20em;" src="lignjoslav.jpg">
+		<div class="gallery">
+			<a href="images/flower.jpg" target="_blank">
+				<img src="thumbs/flower-thumb.png">
+			</a>
+		</div>
 	</body>
 <html>
