--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -17,7 +17,7 @@
 		</header>
 		<div class="gallery">
 			<a href="images/flower.jpg" target="_blank">
-				<img src="thumbs/flower-thumb.png">
+				<img src="thumbs/flower-thumb.jpg">
 			</a>
 		</div>
 	</body>
