--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -15,10 +15,14 @@
 				</nav>
 			</div>
 		</header>
-		<div class="gallery">
-			<a href="images/flower.jpg" target="_blank">
-				<img src="thumbs/flower-thumb.jpg">
-			</a>
-		</div>
+		<h2>Sadržaj</h2>
+		<ul>
+			<ul><li>Lične slike</li></ul>
+			<ul><li>Mimovi</li></ul>
+			<ul><li>Fotografije</li></ul>
+		</ul>
+		<a href="images/flower.jpg" target="_blank">
+			<img src="thumbs/flower-thumb.jpg">
+		</a>
 	</body>
 <html>
