--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -22,7 +22,7 @@
 			<ul><li>Fotografije</li></ul>
 		</ul>
 		<a href="images/flower.jpg" target="_blank">
-			<img src="thumbs/flower-thumb.jpg">
+			<img src="thumbs/flower-thumb.webp">
 		</a>
 	</body>
 <html>
