--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -17,12 +17,17 @@
 		</header>
 		<h2>Sadržaj</h2>
 		<ul>
-			<ul><li>Lične slike</li></ul>
-			<ul><li>Mimovi</li></ul>
-			<ul><li>Fotografije</li></ul>
+			<ul><li onclick="toggle(priv)">Lične slike</li></ul>
+			<ul><li onclick="toggle(mim)">Mimovi</li></ul>
+			<ul><li onclick="toggle(foto)">Fotografije</li></ul>
 		</ul>
-		<a href="images/flower.jpg" target="_blank">
-			<img src="thumbs/flower-thumb.webp">
-		</a>
+		<a class="" href="images/flower.jpg" target="_blank">
+			<img src="thumbs/flower-thumb.webp"></a>
+		<a class="mim" href="images/ff_x_t3_002.JPG" target="_blank">
+			<img src="thumbs/ff_x_t3_002.webp"></a>
+		<a class="mim" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
+			<img src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>
+		<a class="mim" href="images/Sample-image10-highres.jpg" target="_blank">
+			<img src="thumbs/Sample-image10-highres.webp"></a>
 	</body>
 <html>
