--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="gallery.css">
+		<script src="gallery.js" defer async></script>
 	</head>
 	<body>
 		<header>
