--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -23,7 +23,7 @@
 			<ul><li onclick="toggle(foto)">Fotografije</li></ul>
 		</ul>
 		<a class="" href="images/flower.jpg" target="_blank">
-			<img src="thumbs/flower-thumb.webp"></a>
+			<img src="thumbs/flower.webp"></a>
 		<a class="mim" href="images/ff_x_t3_002.JPG" target="_blank">
 			<img src="thumbs/ff_x_t3_002.webp"></a>
 		<a class="mim" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
