--- a/winnc/index.htm
+++ b/winnc/index.htm
@@ -12,11 +12,11 @@
 				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
 				<nav>
 					<a href="/winnc/">winnc</a>
-					<a href="/gallery/">gallery</a>
+					<a href="/gallery/">galerija</a>
 				</nav>
 			</div>
 		</header>
-		<img src="gifs/construction.gif">
-		<img style="height: 3em;" src="gifs/mynigga.gif">
+		<h2>Prezentacije</h2>
+		<a src="pdf/trigonometrija.pdf">Trigonometrija</a>
 	</body>
 <html>
