--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -4,31 +4,31 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="gallery.css">
-		<script src="gallery.js" defer async></script>
+		<link rel="stylesheet" href="/home.css">
 	</head>
 	<body>
 		<header>
 			<div class="header">
-				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<a href="/"><h1>jano privracki</h1></a> <hr/>
 				<nav>
+					<a href="/winnc/">winnc</a>
 					<a href="/gallery">gallery</a>
 				</nav>
 			</div>
 		</header>
-		<h2>Sadržaj</h2>
+		<h2>sadržaj (u izradi)</h2>
 		<ul>
-			<ul><li onclick="toggle(priv)">Lične slike</li></ul>
-			<ul><li onclick="toggle(mim)">Mimovi</li></ul>
-			<ul><li onclick="toggle(foto)">Fotografije</li></ul>
+			<ul><li>fotografije</li></ul>
+			<ul><li>mimovi</li></ul>
 		</ul>
+		<h2>proba</h2>
 		<a href="images/flower.jpg" target="_blank">
-			<img src="thumbs/flower.webp"></a>
+			<img class="thumb" src="thumbs/flower.webp"></a>
 		<a href="images/ff_x_t3_002.JPG" target="_blank">
-			<img class="mim" src="thumbs/ff_x_t3_002.webp"></a>
+			<img class="thumb" src="thumbs/ff_x_t3_002.webp"></a>
 		<a href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
-			<img src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>
+			<img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>
 		<a href="images/Sample-image10-highres.jpg" target="_blank">
-			<img class="mim" src="thumbs/Sample-image10-highres.webp"></a>
+			<img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>
 	</body>
 <html>
