--- a/index.htm
+++ b/index.htm
@@ -9,10 +9,10 @@
 	<body>
 		<header>
 			<div class="header">
-				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<a href="/"><h1>jano privracki</h1></a> <hr/>
 				<nav>
 					<a href="/winnc/">winnc</a>
-					<a href="/gallery/">gallery</a>
+					<a href="/gallery/">galerija</a>
 				</nav>
 			</div>
 		</header>
