--- a/winnc/index.htm
+++ b/winnc/index.htm
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<div class="header">
-				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<a href="/"><h1>jano privracki</h1></a> <hr/>
 				<nav>
 					<a href="/winnc/">winnc</a>
 					<a href="/gallery/">galerija</a>
@@ -17,6 +17,8 @@
 			</div>
 		</header>
 		<h2>Prezentacije</h2>
-		<a src="pdf/trigonometrija.pdf">Trigonometrija</a>
+		<ol>
+			<li><a href="pdf/trigonometrija.pdf">Trigonometrija</a></li>
+		</ol>
 	</body>
 <html>
