--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -12,7 +12,8 @@
 				<a href="/"><h1>jano privracki</h1></a> <hr/>
 				<nav>
 					<a href="/winnc/">winnc</a>
-					<a href="/gallery">gallery</a>
+					<span>|</span>
+					<a href="/gallery">galerija</a>
 				</nav>
 			</div>
 		</header>
