--- a/winnc/index.htm
+++ b/winnc/index.htm
@@ -12,6 +12,7 @@
 				<a href="/"><h1>jano privracki</h1></a> <hr/>
 				<nav>
 					<a href="/winnc/">winnc</a>
+					<span>|</span>
 					<a href="/gallery/">galerija</a>
 				</nav>
 			</div>
