--- a/winnc/index.htm
+++ b/winnc/index.htm
@@ -17,7 +17,7 @@
 				</nav>
 			</div>
 		</header>
-		<h2>Prezentacije</h2>
+		<h2>prezentacije</h2>
 		<ol>
 			<li><a href="pdf/trigonometrija.pdf">Trigonometrija</a></li>
 		</ol>
