--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -23,13 +23,13 @@
 			<ul><li>mimovi</li></ul>
 		</ul>
 		<h2>proba</h2>
-		<a href="images/flower.jpg" target="_blank">
+		<a class="thumblink" href="images/flower.jpg" target="_blank">
 			<img class="thumb" src="thumbs/flower.webp"></a>
-		<a href="images/ff_x_t3_002.JPG" target="_blank">
+		<a class="thumblink" href="images/ff_x_t3_002.JPG" target="_blank">
 			<img class="thumb" src="thumbs/ff_x_t3_002.webp"></a>
-		<a href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
+		<a class="thumblink" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
 			<img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>
-		<a href="images/Sample-image10-highres.jpg" target="_blank">
+		<a class="thumblink" href="images/Sample-image10-highres.jpg" target="_blank">
 			<img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>
 	</body>
 <html>
