--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -4,27 +4,32 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/home.css">
+		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
 		<header>
-			<div class="header">
-				<a href="/"><h1>jano privracki</h1></a> <hr/>
-				<nav>
-					<a href="/winnc/">winnc</a>
-					<span>|</span>
-					<a href="/gallery">galerija</a>
-				</nav>
-			</div>
+				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
 		</header>
-		<h2>sadržaj (u izradi)</h2>
+			<nav>
+				<a href="/winnc/">WinNC</a>
+				<span>|</span>
+				<a href="/gallery">Galerija</a>
+			</nav>
+		<h2>Sadržaj (u izradi)</h2>
 		<ul>
-			<ul><li>fotografije</li></ul>
-			<ul><li>mimovi</li></ul>
+			<ul><li>Fotografije</li></ul>
+			<ul><li>Mimovi</li></ul>
 		</ul>
 		<h2>proba</h2>
 		<div id="gal">
-			<a class="thumblink" href="images/flower.jpg" target="_blank"><img class="thumb" src="thumbs/flower.webp"></a><a class="thumblink" href="images/ff_x_t3_002.JPG" target="_blank"><img class="thumb" src="thumbs/ff_x_t3_002.webp"></a><a class="thumblink" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank"><img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a><a class="thumblink" href="images/Sample-image10-highres.jpg" target="_blank"><img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>
+			<a class="thumblink" href="images/flower.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/flower.webp"></a>\
+			<a class="thumblink" href="images/ff_x_t3_002.JPG" target="_blank">\
+				<img class="thumb" src="thumbs/ff_x_t3_002.webp"></a>\
+			<a class="thumblink" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>\
+			<a class="thumblink" href="images/Sample-image10-highres.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>
 		</div>
 	</body>
 <html>
