--- a/index.htm
+++ b/index.htm
@@ -4,20 +4,17 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/home.css">
+		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
 		<header>
-			<div class="header">
-				<a href="/"><h1>jano privracki</h1></a> <hr/>
-				<nav>
-					<a href="/winnc/">winnc</a>
-					<span>|</span>
-					<a href="/gallery/">galerija</a>
-				</nav>
-			</div>
+				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
 		</header>
+		<nav>
+			<a href="/winnc/">WinNC</a>
+			<span>|</span>
+			<a href="/gallery/">Galerija</a>
+		</nav>
 		<img src="gifs/construction.gif">
-		<img style="height: 3em;" src="gifs/mynigga.gif">
 	</body>
 <html>
