--- a/winnc/index.htm
+++ b/winnc/index.htm
@@ -4,20 +4,20 @@
 		<title>Jano Privracki</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/home.css">
+		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
 		<header>
-			<div class="header">
-				<a href="/"><h1>jano privracki</h1></a> <hr/>
-				<nav>
-					<a href="/winnc/">winnc</a>
-					<span>|</span>
-					<a href="/gallery/">galerija</a>
-				</nav>
-			</div>
+				<a href="/"><h1>Jano Privracki</h1></a>
+				<hr/>
 		</header>
-		<h2>prezentacije</h2>
+		<nav>
+			<ul>
+				<li><a href="/winnc/">WinNC</a></li>
+				<li><a href="/gallery/">Galerija</a></li>
+			</ul>
+		</nav>
+		<h2>Prezentacije</h2>
 		<ol>
 			<li><a href="pdf/trigonometrija.pdf">Trigonometrija</a></li>
 		</ol>
