--- a/index.htm
+++ b/index.htm
@@ -8,12 +8,14 @@
 	</head>
 	<body>
 		<header>
-				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<a href="/"><h1>Jano Privracki</h1></a>
+				<hr/>
 		</header>
 		<nav>
-			<a href="/winnc/">WinNC</a>
-			<span>|</span>
-			<a href="/gallery/">Galerija</a>
+			<ul>
+				<li><a href="/winnc/">WinNC</a></li>
+				<li><a href="/gallery/">Galerija</a></li>
+			</ul>
 		</nav>
 		<img src="gifs/construction.gif">
 	</body>
