--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -8,19 +8,19 @@
 	</head>
 	<body>
 		<header>
-				<a href="/"><h1>Jano Privracki</h1></a> <hr/>
+				<a id="title" href="/"><h1>Jano Privracki</h1></a>
 		</header>
 		<nav>
-			<a href="/winnc/">WinNC</a>
-			<span>|</span>
-			<a href="/gallery">Galerija</a>
+			<ul>
+				<li><a href="/winnc/">WinNC</a></li>
+				<li><a href="/gallery/">Galerija</a></li>
+			</ul>
 		</nav>
 		<h2>Sadržaj (u izradi)</h2>
 		<ul>
-			<ul><li>Fotografije</li></ul>
-			<ul><li>Mimovi</li></ul>
+			<li>Fotografije</li>
+			<li>Mimovi</li>
 		</ul>
-		<h2>Proba</h2>
 		<div id="imageGrid">
 			<a class="thumblink" href="images/flower.jpg" target="_blank">
 				<img class="thumb" src="thumbs/flower.webp"></a>
