--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-				<a href="/"><h1>Jano Privracki</h1></a>
+				<a id="title" href="/"><h1>Jano Privracki</h1></a>
 				<hr/>
 		</header>
 		<nav>
