--- a/gallery/index.htm
+++ b/gallery/index.htm
@@ -17,14 +17,14 @@
 			<li>Mimovi</li>
 		</ul>
 		<div id="imageGrid">
-			<a class="thumblink" href="images/flower.jpg" target="_blank">
-				<img class="thumb" src="thumbs/flower.webp"></a>
-			<a class="thumblink" href="images/ff_x_t3_002.JPG" target="_blank">
-				<img class="thumb" src="thumbs/ff_x_t3_002.webp"></a>
-			<a class="thumblink" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">
-				<img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>
-			<a class="thumblink" href="images/Sample-image10-highres.jpg" target="_blank">
-				<img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>
+			<a class="thumblink" href="images/flower.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/flower.webp"></a>\
+			<a class="thumblink" href="images/ff_x_t3_002.JPG" target="_blank">\
+				<img class="thumb" src="thumbs/ff_x_t3_002.webp"></a>\
+			<a class="thumblink" href="images/canon-powershot-g3-x-sample-images-1.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/canon-powershot-g3-x-sample-images-1.webp"></a>\
+			<a class="thumblink" href="images/Sample-image10-highres.jpg" target="_blank">\
+				<img class="thumb" src="thumbs/Sample-image10-highres.webp"></a>\
 		</div>
 		<nav>
 			<hr/>
